--- a/Finland.html
+++ b/Finland.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=.0" />
-    <title>Countries in Europe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Finland</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header class="header">
       <h1>Countries in Europe</h1>
@@ -33,11 +32,19 @@
         <li><a href="Norway.html">Norway</a></li>
       </ul>
     </div>
-    <div class="homecontent">
-      <img
-        src="världen.svg"
-        alt="Picture of the globe with a highligt of Europe"
-      />
+
+    <div class="content">
+      <h1>Finland</h1>
+      <br />
+      <p>
+        Finland is a Northern European country with a population of 5.6 million,
+        known for its pristine nature, education system, and high quality of
+        life. Helsinki, the capital, is a coastal city with modern design.
+        Finland is famous for its thousands of lakes, the Northern Lights, and
+        being the home of the sauna.
+      </p>
+      <br />
+      <img src="Finlands flagga.png" alt="Finlands flag" width="250" />
     </div>
     <div class="footer">
       <h3>
