--- a/Germany.html
+++ b/Germany.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=.0" />
-    <title>Countries in Europe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Germany</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header class="header">
       <h1>Countries in Europe</h1>
@@ -33,11 +32,18 @@
         <li><a href="Norway.html">Norway</a></li>
       </ul>
     </div>
-    <div class="homecontent">
-      <img
-        src="världen.svg"
-        alt="Picture of the globe with a highligt of Europe"
-      />
+
+    <div class="content">
+      <h1>Germany</h1>
+      <br />
+      <p>
+        Germany is a Central European country with 84 million people, renowned
+        for its strong economy and cultural influence. Its capital, Berlin, is a
+        center for art and politics. Germany is famous for Oktoberfest, over
+        25,000 castles, and leadership in renewable energy.
+      </p>
+      <br />
+      <img src="Germanys flag.png" alt="Germanys flag" width="250" />
     </div>
     <div class="footer">
       <h3>
