--- a/Norway.html
+++ b/Norway.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=.0" />
-    <title>Countries in Europe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Norway</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header class="header">
       <h1>Countries in Europe</h1>
@@ -33,11 +32,19 @@
         <li><a href="Norway.html">Norway</a></li>
       </ul>
     </div>
-    <div class="homecontent">
-      <img
-        src="världen.svg"
-        alt="Picture of the globe with a highligt of Europe"
-      />
+
+    <div class="content">
+      <h1>Norway</h1>
+      <br />
+      <p>
+        Norway is a Scandinavian country with 5.5 million people, celebrated for
+        its stunning fjords and outdoor lifestyle. Its capital, Oslo, blends
+        nature with urban life. Norway is known for being a leader in renewable
+        energy, its Viking history, and the phenomenon of the midnight sun
+        during summer.
+      </p>
+      <br />
+      <img src="Norways flag.png" alt="Norways flag" width="200" />
     </div>
     <div class="footer">
       <h3>
