--- a/Sweden.html
+++ b/Sweden.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=.0" />
-    <title>Countries in Europe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sweden</title>
+    <!-- <link rel="stylesheet" href="Index.html" /> -->
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -33,11 +34,19 @@
         <li><a href="Norway.html">Norway</a></li>
       </ul>
     </div>
-    <div class="homecontent">
-      <img
-        src="världen.svg"
-        alt="Picture of the globe with a highligt of Europe"
-      />
+
+    <div class="content">
+      <h1>Sweden</h1>
+      <br />
+      <p>
+        Sweden is a Scandinavian country with a population of 10.5 million,
+        known for its natural beauty, innovation, and sustainability. Its
+        capital, Stockholm, spans 14 islands. Sweden is home to the first ice
+        hotel, a thriving music scene, and a unique "right to roam" law,
+        allowing public access to nature.
+      </p>
+      <br />
+      <img src="Swedens flag.png" alt="Swedens flag" />
     </div>
     <div class="footer">
       <h3>
